fix error build

--- a/src/client/src/app/map/map.component.html
+++ b/src/client/src/app/map/map.component.html
@@ -226,10 +226,10 @@
 <!--														<p style="margin-bottom: 0px">com indícios de degradação </p>-->
 <!--														<p class="stylePercentual">({{ indicatorPastureDegradedPercentual | number:'1.1-2'}}% do(a) {{ regionTypeBr }})</p>-->
 <!--													</div>-->
-													<div class="value-indicators" *ngIf="pastureDagradedYear == '2010'">
+													<div class="value-indicators" *ngIf="pastureDagradedYear == 2010">
                             <span><strong>167.7</strong> mha<br><small>milhoes de hectares</small></span>
 													</div>
-                          <div class="value-indicators" *ngIf="pastureDagradedYear == '2018'">
+                          <div class="value-indicators" *ngIf="pastureDagradedYear == 2018">
                             <span><strong>166</strong> mha <br><small>milhoes de hectares</small></span>
                           </div>
 
