show layer pasture_quality

--- a/src/client/src/app/map/map.component.html
+++ b/src/client/src/app/map/map.component.html
@@ -206,7 +206,7 @@
 										<div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 slider-layer">
 <!--                      <mat-slide-toggle (change)="layerchecked('classes_degradacao_pastagem', $event)"></mat-slide-toggle>-->
 <!--                      (change)="layerchecked('pasture_quality', $event)"-->
-                      <mat-slide-toggle ></mat-slide-toggle>
+                      <mat-slide-toggle (change)="layerchecked('pasture_quality', $event)"></mat-slide-toggle>
 										</div>
 										<div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10 expansion-layer">
 											<mat-expansion-panel>
